force-app/main/default/objects/B25__Conflict__c/B25__Conflict__c.object-meta.xml
<CustomObject>
    <label>Conflict</label>
    <nameField>
        <displayFormat>C-{0000000}</displayFormat>
        <label>Conflict Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conflicts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>