force-app/main/default/objects/B25__Conflict__c/fields/B25__Description__c.field-meta.xml
<CustomField>
    <fullName>B25__Description__c</fullName>
    <description>Description of what caused the conflict.</description>
    <inlineHelpText>Description de ce qui a causé le conflit.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>