force-app/main/default/objects/B25__Conflict__c/fields/B25__Dimension__c.field-meta.xml
<CustomField>
    <fullName>B25__Dimension__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The dimension in which the conflict occurred.</description>
    <inlineHelpText>La dimension dans laquelle le conflit s’est produit.</inlineHelpText>
    <label>Dimension</label>
    <referenceTo>B25__Dimension__c</referenceTo>
    <relationshipLabel>Conflicts</relationshipLabel>
    <relationshipName>Conflicts</relationshipName>
    <type>Lookup</type>
</CustomField>