force-app/main/default/objects/B25__Conflict__c/fields/B25__Related_Id__c.field-meta.xml
<CustomField>
    <fullName>B25__Related_Id__c</fullName>
    <description>The id of the related record which caused the conflict.</description>
    <inlineHelpText>L’identifiant de l’enregistrement connexe qui a causé le conflit.</inlineHelpText>
    <label>Related Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>