force-app/main/default/objects/B25__Conflict__c/fields/B25__Reservation2__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The other Reservation that the main Reservation conflicts with.</description>
    <inlineHelpText>L’autre réservation avec laquelle la réservation principale entre en conflit.</inlineHelpText>
    <label>Reservation</label>
    <referenceTo>B25__Reservation__c</referenceTo>
    <relationshipLabel>Conflicts caused by other Reservations</relationshipLabel>
    <relationshipName>Conflicts2</relationshipName>
    <type>Lookup</type>
</CustomField>