force-app/main/default/objects/B25__Conflict__c/fields/B25__Reservation__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation__c</fullName>
    <description>The Reservation that caused this Conflict.</description>
    <inlineHelpText>La réservation qui a causé ce conflit.</inlineHelpText>
    <label>Reservation</label>
    <referenceTo>B25__Reservation__c</referenceTo>
    <relationshipLabel>Conflicts</relationshipLabel>
    <relationshipName>Conflicts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>