force-app/main/default/objects/B25__Conflict__c/recordTypes/B25__Capacity.recordType-meta.xml
<RecordType>
    <fullName>B25__Capacity</fullName>
    <active>true</active>
    <label>Capacity</label>
</RecordType>