force-app/main/default/objects/B25__Conflict__c/recordTypes/B25__Double_Booking.recordType-meta.xml
<RecordType>
    <fullName>B25__Double_Booking</fullName>
    <active>true</active>
    <label>Double Booking</label>
</RecordType>