force-app/main/default/objects/B25__Conflict__c/recordTypes/B25__Unavailability.recordType-meta.xml
<RecordType>
    <fullName>B25__Unavailability</fullName>
    <active>true</active>
    <label>Unavailability</label>
</RecordType>